# polaris

./: .dockerignore  .env.development  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  Package.resolved  Package.swift  README.md  Testing.Dockerfile  index.html  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  panda.config.ts  playwright.config.ts  postcss.config.mjs  rollup.config.mjs  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vcpkg-configuration.json  vcpkg.json  vcpkg.md  vite.config.mts  vitest.config.mts  vitest.setup.ts
advisor/: .gitignore  CLAUDE.md  README.md  db.py  main.py  pyproject.toml
advisor/config/: config.yaml
advisor/genai/: gemma.py
advisor/models/: article.py
advisor/schemas/: article.py
base/: CMakeLists.txt  CMakePresets.json
base/models/: Article.h
base/types/: Exception.cpp  Exception.h  String.cpp  StringUtils.cpp  StringUtils.h  datetime.cpp  datetime.h
base/utils/: EnumUtils.h  basex.cpp  datetime.h  email.cpp  mime.cpp  mime.h  query.cpp  query.h  uuid.h
calieo/: CMakeLists.txt
calieo/examples/: main.cpp
calieo/linux/: CMakeLists.txt  main.cpp
calieo/macos/: CMakeLists.txt
calieo/portal/: README.md
calieo/server/: CMakeLists.txt  main.cpp  process.cpp  router.cpp  router.h
calieo/syncer/: README.md
calieo/telescope/: CMakeLists.txt
calieo/web/: CMakeLists.txt  package.json
calieo/windows/: CMakeLists.txt  Venus.sln
examples/: CMakeLists.txt  cases.cpp
examples/articles/: article.cpp  channel.cpp  channel.h  library.cpp  notebook.cpp
examples/files/: file.cpp
examples/sqlite/: sqlite.cpp  sqlite.h
huable/: CMakeLists.txt
huable/business/: rollup.config.mjs
huable/cloud/: CMakeLists.txt  README.md
huable/examples/: main.cpp
huable/linux/: CMakeLists.txt  main.cpp
huable/rudder/: Package.resolved  Package.swift  docker-compose.yml
huable/server/: CMakeLists.txt  main.cpp  process.cpp  process.h  router.cpp  router.h
huable/starlight/: CMakeLists.txt
huable/tests/: CMakeLists.txt  cases.cpp  cases.h  main.cpp
huable/web/: .env.development  README.md  next.config.mjs  package-lock.json  package.json
huable/worker/: .env.development  package.json
linux/: CMakeLists.txt  foo.cxx  main.cxx
linux/models/: LibraryModel.cpp
linux/services/: ImageService.cpp  ImageService.h  LibraryService.cpp  LibraryService.h  SyncService.cpp
linux/threads/: SyncThread.cpp
macos/: .gitignore  CMakeLists.txt
macos/Venus/: AppDelegate.swift  ArticleModel.swift  ContentView.swift  GridLayoutView.swift  GridView.swift  ImageView.swift
macos/Venus.xcodeproj/: project.pbxproj
macos/Venus.xcworkspace/: contents.xcworkspacedata
native/: CMakeLists.txt
native/examples/: CMakeLists.txt  cases.cpp  cases.h  main.cpp  main.cppm
native/models/: Article.cpp  Article.h  Codes.cpp  CommonResult.cpp  Picture.h
native/utils/: EnumUtils.cpp  EnumUtils.h  StringUtils.cpp  StringUtils.h  basex.cpp  basex.h  datetime.cpp  md5.cc  md5.h  mime.cpp  mime.h  query.cpp  query.h  uuid.cpp
polaris/: .env.development  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  vcpkg.json  vcpkg.md  vitest.config.mts
polaris/Venus/: AppDelegate.swift  NewWindow.swift
polaris/Venus.xcodeproj/: project.pbxproj
polaris/Venus.xcworkspace/: contents.xcworkspacedata
polaris/atom/: tsconfig.json
polaris/base/: CMakeLists.txt
polaris/config/: host.env
polaris/docs/: pages.md
polaris/kde/: CMakeLists.txt
polaris/public/: site.webmanifest  sw.js
polaris/server/: CMakeLists.txt  process.cpp  router.h
polaris/src/: middleware.ts
quantum/: CMakeLists.txt  Cargo.toml  build.h.in  build.rs  module.modulemap
quantum/crate/: blobstore.cc  concat.cc  lib.rs
quantum/include/: concat.h
quantum/tests/: cases.h  main.cpp
quantum/types/: Exception.h  String.h  datetime.cpp  datetime.h
quantum/utils/: EnumUtils.cpp  basex.h  email.h  md5.cpp  md5.h  mime.cpp  mime.h  query.cpp  query.h  uuid.cpp  uuid.h
server/: CMakeLists.txt  README.md  foo.cxx  main.cpp  main.cxx  process.cpp  process.h  router.cpp  router.h
server/controllers/: article.cpp  article.h  channel.cpp  channel.h  index.cpp  index.h  sitemap.cpp  sitemap.h
server/models/: common_result.cpp
server/utils/: mime.cpp  mime.h
shine/: Cargo.toml  build.rs
shine/include/: concat.h
shine/src/: main.rs
weable/: CMakeLists.txt
weable/business/: README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
weable/cloud/: .dockerignore  .gitignore
weable/dawn/: CMakeLists.txt
weable/electron/: .env.development  .env.production  .gitignore  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json
weable/kde/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
weable/linux/: CMakeLists.txt  main.cpp
weable/macos/: README.md
weable/nextjs/: .dockerignore  .env.development  .env.production  .gitignore  Dockerfile  README.md  build.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
weable/server/: CMakeLists.txt  main.cpp  process.cpp  router.cpp
weable/worker/: .dockerignore  .env.development  .env.production  .gitignore  Dockerfile  build.mjs  eslint.config.mjs  main.ts  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
web/: .env.development  .gitignore  CMakeLists.txt  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/atom/: package-lock.json  package.json
web/data/: domains.json
web/src/: middleware.ts
windows/: CMakeLists.txt  Venus.sln
windows/CSharpUI/: CSharpUI.csproj  MainWindow.xaml.cs
windows/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
windows/CppCLI/: CppCLI.vcxproj  Helper.cpp
windows/Native/: main.cpp
windows/SimpleMathComponent/: SimpleMathComponent.vcxproj
windows/SimpleMathProjection/: SimpleMathProjection.csproj
windows/Venus/: MainWindow.xaml.cpp  (+1 more)
windows/Venus.UI/: App.xaml.cs  MainWindow.xaml.cs  Venus.UI.csproj
(+2165 files in other folders)
