[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxima"
path = "src/main.rs"

[dependencies]
handlebars = "6.2.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
axum = "0.7.9"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.0"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
string-builder = { version = "0.2.0" }
html-escape = "0.2.11"
xml-rs = "0.8.4"
jsonwebtoken = "9.3.0"
once_cell = "1.12.0"
nanoid = "0.4.0"
async-trait = "0.1.56"
postgres-types = "0.2.3"
pinyin = "0.10.0"
jieba-rs = "0.7.0"